src/main/resources/resources/light.less
/* ... */
.form-cell .tablesaw-stack tbody tr, .subform-cell .tablesaw-stack tbody tr {
    border-bottom: 0;
    border-top: 1px solid #d4d4d4;
}

.pq-grid span.pq-grid-header{
    background: transparent !important;
}

.pq-grid td.pq-grid-col{
    color: @fontColor;
}

.pq-grid div.pq-header-outer{
    background: @primary !important;
}

.pq-grid-toolbar .ui-button {
    background: @button;
    border: 1px solid @button !important;
    box-shadow: 0 0 2px rgba(0, 0, 0, 0.2), 0 4px 4px -2px rgba(0, 0, 0, 0.2);
}

.fc-day-header{
    background: @primary;
    color: @defaultFontColor;
    font-size: 1.5rem;
}

body .dataList span.pagelinks strong, main .dataList span.pagelinks strong {
    border: 1px solid @button !important;
    background-color: @button !important;
    color: white;
    font-weight: 500;
}

body input:not([type]):focus:not([readonly]),
body input[type=text]:focus:not([readonly]),
body input[type=password]:focus:not([readonly]),
body input[type=email]:focus:not([readonly]),
body input[type=url]:focus:not([readonly]),
body input[type=time]:focus:not([readonly]),
body input[type=date]:focus:not([readonly]),
body input[type=datetime]:focus:not([readonly]),
body input[type=datetime-local]:focus:not([readonly]),
body input[type=tel]:focus:not([readonly]),
body input[type=number]:focus:not([readonly]),
body input[type=search]:focus:not([readonly]),
body textarea:focus:not([readonly]),
body select:focus:not([readonly]):not([class^=ui]),
body input.focus,
body .editor-cell input:not([type]):focus:not([readonly]),
body .editor-cell input[type=text]:focus:not([readonly]),
body .editor-cell input[type=password]:focus:not([readonly]),
body .editor-cell input[type=email]:focus:not([readonly]),
body .editor-cell input[type=url]:focus:not([readonly]),
body .editor-cell input[type=time]:focus:not([readonly]),
body .editor-cell input[type=date]:focus:not([readonly]),
body .editor-cell input[type=datetime]:focus:not([readonly]),
body .editor-cell input[type=datetime-local]:focus:not([readonly]),
body .editor-cell input[type=tel]:focus:not([readonly]),
body .editor-cell input[type=number]:focus:not([readonly]),
body .editor-cell input[type=search]:focus:not([readonly]),
body .editor-cell textarea:focus:not([readonly]),
body .editor-cell select:focus:not([readonly]):not([class^=ui]),
body .editor-cell input.focus{
  border: 1px solid @formElementColor;
  box-shadow: 0 0 0 0.3rem fade(@formElementColor, 30%);
}

.user-menu{
  background: @profileBackgroundImage;
  background-size: 268px 118px;
  background-repeat: no-repeat;
}

body.horizontal_menu #sidebar .nav>li:hover ul{
    display:block  !important;
}

.dataList table a.waves-button {
    color: @defaultFontColor;
}

body .select_checkbox label > [type="checkbox"]:hover + i:after,
body label > input[type=checkbox]:hover + i:after{
    border: 1px solid @formElementColor;
}

body .select_radio label > input[type="radio"]:hover + i:after,
body label > input[type="radio"]:hover + i:after{
    border: 1px solid @formElementColor;
}

body .select_radio label > input[type="radio"]:checked + i:after,
body label > input[type="radio"]:checked + i:after {
    content: "" !important;
    font: 0/0 a !important;
    background-color: #fff !important;
    border: 2px solid @formElementColor !important;
    box-shadow: inset 0 0 0 4px @formElementColor !important;
}

body .select_checkbox label > [type="checkbox"]:checked + i:after,
body label > input[type=checkbox]:checked + i:after {
    content: "\f00c" !important;
    font-family: Font Awesome\ 5 Free !important;
    font-weight: 600 !important;
    font-size: 12px !important;
    line-height: 18px !important;
    color: #fff !important;
    background-color: @formElementColor !important;
    border: 1px solid @formElementColor !important;
    box-shadow: 0 0 0 0.2rem transparent;
}

body .grid-action-add:after{
    background-color: @formElementColor;
    border: 1px solid @formElementColor;
}

body .chosen-container-multi .chosen-choices li.search-choice, body .chosen-container-single .chosen-single{
    color: @fontColor;
}

.form-cell-value label, .subform-cell-value label{
    color: @fontColor;
}

.badge{
    background-color: @rowCountBackgroundColor;
    border: 1px solid @rowCountBackgroundColor;
}

div.form-section-title{
    background: @headerColor;
    border-radius: 3px 3px 0 0;
    color: @headerTextColor;
}

.fc-toolbar h2{
    color:@fontLabelColor;
}

.fc button {
    color: @buttonText;
    background-color: @button;
    text-shadow: none;
    border: none;
    box-shadow: none;
}

.fc button:hover {
    background-color: darken(@button, 10%);
    box-shadow: none;
    border:none;
    border-radius: 0px;
}

#page > footer{
    color: @defaultFontColor;
}

.nav>li>a:focus, .nav>li>a:hover{
    background-color: @defaultFontColor;
    border: 0;
    color: @primary;
}

#content > main > div.datalist-body-content > h1, #content > main > div.datalist-body-content > h2, #content > main > div.datalist-body-content > h3{
    background: @headerColor;
    color: @headerTextColor;
}

main #form-canvas .form-section-title span{
    color: @headerTextColor;
}

body.horizontal_menu #sidebar li ul li.active a .badge,
body.horizontal_menu .main-menu.nav-tabs .active > a > .badge{
    background: @menuFont;
    color: @rowCountBackgroundColor;
}

body.horizontal_menu #sidebar .main-menu.nav-tabs > li.active > a > span > i{
    color: @menuFont;
}

body.horizontal_menu.inline_menu #sidebar .main-menu.nav-tabs > li.active > a > span > i{
    color: @primary;
}

.menu-link .default{
    padding-left: 10px;
}

body.horizontal_menu #sidebar .main-menu.nav-tabs > li > a > span > i {
    display: @ShowIcons;
    font-size: 16px;
}

legend, main #form-canvas .subform-section-title span {
    color: @fontLabelColor;
}

.activeFont {
    color: @buttonText !important;
    background-color: @button !important;
}
/* ... */

